--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="main-container">
         <div class="welcome-text">
-
+            <p>Welcome!</p>
         </div>
         <div class="logo">
 
         </div>
         <div class="more-info">
-
+            <p>An open-source initiative by codrop.io</p>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
