--- a/calculator.html
+++ b/calculator.html
@@ -5,16 +5,18 @@
     <title>codrop.io</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/body.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="assets/js/calculator.js"></script>
 </head>
 <body>
-    <div class="main-container">
+    <div class="main-container" style="position: relative">
         <div class=row style="text-align: center; margin-top: 20px;">
             <div class="col-lg-12">
                 <img src="assets/img/logo-resized.png" height="100" width="100">
+            </div>
+            <div class="col-lg-12">
+                <p>© 2018 Copyright: An open-source initiative. Made with <i class="fas fa-heart"></i> by CODROP.IO</p>
             </div>
         </div>
         <div class="row" style="margin-top: 50px;">
@@ -27,9 +29,9 @@
                                 <select class="custom-select custom-select-sm" id="category"> 
                                     <option value="d">Domestic</option>
                                     <option value="r">Religious</option>
-                                    <option value="g">General Purpose</option>
-                                    <option value="h">Hotel</option>
-                                    <option value="i">Industrial</option>
+                                    <option value="g">General Purpose-1</option>
+                                    <option value="h">Hotel-1</option>
+                                    <option value="i">Industrial-1</option>
                                 </select>
                             </td>
                         </tr>
@@ -38,7 +40,7 @@
                             <td><input type="number" class="form-control form-control-sm" id="units"></td>
                         </tr>
                         <tr>
-                            <td colspan="2"><button class="btn btn-outline-primary btn-block">Calculate</button></td>
+                            <td colspan="2"><button class="btn btn-outline-primary btn-block" onclick="calculate()">Calculate</button></td>
                         </tr>
                         <tr>
                             <td colspan="2"><button class="btn btn-outline-danger btn-block" onclick="reset()">Reset</button></td>
@@ -54,28 +56,25 @@
                         </tr>
                         <tr>
                             <td>Total Units Charge</td>
-                            <td><span>LKR </span><p id="totUnitCharge"></p></td>
+                            <td><span>LKR </span><p style="display: inline; font-weight: bold" id="totUnitCharge"></p></td>
                         </tr>
                         <tr>
                             <td>Fuel Adjustment Charge</td>
-                            <td><span>LKR </span><p id="fuelCharge"></p></td>
+                            <td><span>LKR </span><p style="display: inline; font-weight: bold" id="fuelCharge"></p></td>
                         </tr>
                         <tr>
                             <td>Fixed Charge</td>
-                            <td><span>LKR </span><p id="fixedCharge"></p></td>
+                            <td></p><span>LKR </span><p style="display: inline; font-weight: bold" id="fixedCharge"></p></td>
                         </tr>
                         <tr>
                             <td>Grand Total</td>
-                            <td><span>LKR </span><p id="grandTotal"></p></td>
+                            <td><span>LKR </span><p style="display: inline; font-weight: bold" id="grandTotal"></p></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-    <div class="footer">
-        <p>An open-source initiative. Made with <i class="fas fa-heart"></i> by CODROP.IO</p> 
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" ></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
